2015-10-17  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.csproj:
	  Implement ATA/ATAPI IDENTIFY decoder.

2015-10-15  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Added ATA and ATAPI identify commands.

2015-10-13  Natalia Portillo  <claunia@claunia.com>

	* Main.cs:
	* Options.cs:
	* DiscImageChef.csproj:
	* Commands/DeviceInfo.cs:
	  Added "device-info" command.

2015-10-12  Natalia Portillo  <claunia@claunia.com>

	* DetectImageFormat.cs:
	  Added standard header.

2015-10-05  Natalia Portillo  <claunia@claunia.com>

	* Decoders/BD.cs:
	* Decoders/CD.cs:
	* Decoders/DVD.cs:
	* Decoders/MMC.cs:
	* Decoders/SCSI.cs:
	* Decoders/Floppy.cs:
	* ImagePlugins/2MG.cs:
	* DiscImageChef.csproj:
	  Move decoders to a separate library.

2015-10-05  Natalia Portillo  <claunia@claunia.com>

	* Plugins.cs:
	* Plugins/BFS.cs:
	* Plugins/FFS.cs:
	* Plugins/ODS.cs:
	* Plugins/FAT.cs:
	* Plugins/NTFS.cs:
	* Plugins/HPFS.cs:
	* Plugins/SysV.cs:
	* Plugins/extFS.cs:
	* Plugins/Opera.cs:
	* Plugins/Plugin.cs:
	* Plugins/LisaFS.cs:
	* Plugins/ext2FS.cs:
	* Plugins/ProDOS.cs:
	* Plugins/SolarFS.cs:
	* Plugins/Symbian.cs:
	* Plugins/UNIXBFS.cs:
	* Plugins/ISO9660.cs:
	* Plugins/MinixFS.cs:
	* Plugins/AmigaDOS.cs:
	* Plugins/PCEngine.cs:
	* Plugins/AppleMFS.cs:
	* Plugins/AppleHFS.cs:
	* DiscImageChef.csproj:
	* Plugins/AppleHFSPlus.cs:
	  Move filesystems to a separate library.

2015-10-05  Natalia Portillo  <claunia@claunia.com>

	* Plugins.cs:
	* PartPlugins/MBR.cs:
	* PartPlugins/RDB.cs:
	* PartPlugins/NeXT.cs:
	* DiscImageChef.csproj:
	* PartPlugins/Atari.cs:
	* PartPlugins/AppleMap.cs:
	* PartPlugins/PartPlugin.cs:
	  Move partitions plugins to a separate library.

2015-10-05  Natalia Portillo  <claunia@claunia.com>

	* Plugins.cs:
	* PartPlugins/RDB.cs:
	* PartPlugins/MBR.cs:
	* ImagePlugins/VHD.cs:
	* PartPlugins/NeXT.cs:
	* Commands/Analyze.cs:
	* ImagePlugins/Nero.cs:
	* DiscImageChef.csproj:
	* DetectImageFormat.cs: